src/objects/TCOR__c.object
<CustomObject>
    <fields>
        <fullName>Baseline_current_S_D__c</fullName>
        <label>Baseline (current) S.D.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baseline_current__c</fullName>
        <label>Baseline (current)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Increase_retention_S_D__c</fullName>
        <label>Increase retention S.D.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Increase_retentions_lower_limits_decrea__c</fullName>
        <label>Increase retentions/lower limits (decrea</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lower_retention_S_D__c</fullName>
        <label>Lower retention S.D.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lower_retentions__c</fullName>
        <label>Lower retentions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>year__c</fullName>
        <label>year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TCOR</label>
    <nameField>
        <label>TCOR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TCOR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>